<resources>
    <string name="getLocationBtn">Get My Location</string>
    <string name="scanBtn">Scan ID</string>
    <string name="sendBtn">Send</string>
    <string name="finalizeBtn">Finalize</string>
    <string name="editBtn">Edit</string>
    <string name="viewBtn">View</string>
    <string name="app_name">GrowApp</string>
    <string name="copyright">RSIS - all rights reserved. Copyright (c) 2021</string>
    <string name="serialNum">Serial Number:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>

    <string name="varietyPlanted">Variety Planted</string>
    <string name="seedSource">Seed Source</string>
    <string name="otherSeedSource">Other Seed Source</string>
    <string name="seedClass">Seed Class Planted</string>
    <string name="datePlanted">Date Planted</string>
    <string name="areaPlanted">Area Planted (ha)</string>
    <string name="seedQuantity">Seed Quantity (kg)</string>
    <string name="seedbedArea">Seedbed Area (sqm)</string>
    <string name="seedlingAge">Seedling Age (days)</string>
    <string name="seedLot">Seed Lot No.</string>
    <string name="labNo">Laboratory No.</string>
    <string name="barangay">Barangay (Farm Location)</string>
    <string name="municipality">Municipality</string>
    <string name="province">Province</string>
    <string name="region">Region</string>
    <string name="riceProgram">Rice Program</string>
    <string name="coop">Affiliated Cooperative</string>
    <string name="previousCrop">Previous Crop Planted</string>
    <string name="previousVariety">Previous Variety Planted</string>

    <string name="about">This RSIS project is a continuum of an assessment of a
        completed rice seed information project of Region 3 as to its validity and essential aspects
        needing improvements to address the current and future technological advances.
        The common yet persisting problems in the rice seed system
        such as delayed data consolidation, analysis, and transmission on rice seed production and distribution are hoped to be addressed.
        Thru ICT and this RSIS, manual data gathering and processing posing higher risk of human errors, delay of information,
        or worse data loss may be reduced and/or eliminated. </string>

    <string name="da_text">RSIS is one of the programs of the Department of Agriculture,
        which aims to provide interventions at both national and local levels to support rice production.</string>

    <string name="dabar_text">Overseer of the implementation of the project; making sure that all resources are commendably being utilized. </string>

    <string name="bpi_text">BPI shall create interface and subsystem that could incorporate and integrate their current business processes (application for seed certification;
        preliminary and final inspection; seed analysis and tagging) in the system.
        Also, the bureau shall capacitate its staff such as seed inspectors, data officers, seed analysts, among others in using the modules and the system.
        The bureau with the help of SIs will also supervise the involvement of SPs in the system.</string>
    <string name="philrice_text">
        Generally, PhilRice shall design the system, and develop platforms that could gather field data (from seed production, monitoring to distribution).
        These developed platforms will continuously be enhanced until such time that the system is ready for nationwide deployment.
        The system shall be enhanced and redesigned (if necessary) based on the inputs and requirements of project partners and their sites during consultative meetings, FGDs, and pilot testing.
        The institute together with other implementers are also responsible for the success of system deployment, operationalization and sustainability nationwide.
    </string>

    <string name="openNavDrawer">Navigation Drawer Open</string>
    <string name="closeNavDrawer">Navigation Drawer Close</string>
</resources>
