<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/titlevariety"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:autoSizeTextType="uniform"
            android:background="#006C35"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:scaleType="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingTop="5dp"
        android:layout_below="@id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:text="Serial Number"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/textaccredno1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear3"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingTop="5dp"
        android:layout_below="@id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/seedSource"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/textsource1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear4"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingTop="5dp"
        android:layout_below="@id/linear3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/varietyPlanted"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/textvariety1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear5"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingTop="5dp"
        android:layout_below="@id/linear4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/seedClass"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/textclass1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear6"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingTop="5dp"
        android:layout_below="@id/linear5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/datePlanted"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/textdateplanted1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear7"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingTop="5dp"
        android:layout_below="@id/linear6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/areaPlanted"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/textareaplanted1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear8"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingTop="5dp"
        android:layout_below="@id/linear7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/seedQuantity"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/textquantity1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear9"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingTop="5dp"
        android:layout_below="@id/linear8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/seedbedArea"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/textseedbedarea1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear10"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingTop="5dp"
        android:layout_below="@id/linear9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/seedlingAge"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/textseedlingage1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear11"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingTop="5dp"
        android:layout_below="@id/linear10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/seedLot"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/textlot1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear12"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingTop="5dp"
        android:layout_below="@id/linear11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/labNo"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/textcontrol1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear13"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingTop="5dp"
        android:layout_below="@id/linear12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/barangay"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/textbarangay1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear14"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingTop="5dp"
        android:layout_below="@id/linear13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/latitude"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/textlatitude1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear15"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingTop="5dp"
        android:layout_below="@id/linear14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/longitude"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/textlongitude1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear16"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingTop="5dp"
        android:layout_below="@id/linear15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Affiliated Cooperative"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/textCoop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear17"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingTop="5dp"
        android:layout_below="@id/linear16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Rice Program"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/textProgram"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>
</RelativeLayout>